// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:list 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <div
              class="cxd-Service"
            >
              <div
                class="amis-Panel amis-Panel--default"
                data-role="container"
              >
                <div
                  class="amis-Panel-heading"
                >
                  <h3
                    class="amis-Panel-title"
                  >
                    <span
                      class="amis-TplField fr-view"
                    >
                      <span>
                        简单 List 示例
                      </span>
                    </span>
                  </h3>
                </div>
                <div
                  class="amis-Panel-body"
                >
                  <div
                    class="amis-List"
                  >
                    <div
                      class="amis-List-content-wrapper"
                    >
                      <div
                        class="amis-List-main"
                      >
                        <div
                          class="amis-List-fixedTop"
                        />
                        <div
                          class="amis-List-items"
                        >
                          <div
                            class="amis-ListItem amis-ListItem--actions-at-right amis-ListItem--hasItemAction"
                            data-index="0"
                            style="scroll-margin-top: var(--affix-offset-top);"
                          >
                            <div
                              class="amis-ListItem-actions"
                            >
                              <button
                                class="amis-Button amis-Button--link amis-Button--size-sm"
                                type="button"
                              >
                                <span>
                                  查看详情
                                </span>
                              </button>
                            </div>
                            <div
                              class="amis-ListItem-content"
                            >
                              <div
                                class="amis-Hbox amis-Hbox--xs"
                              >
                                <div
                                  class="amis-Hbox-col"
                                >
                                  <div
                                    class="amis-ListItem-field"
                                  >
                                    <label
                                      class="amis-ListItem-fieldLabel"
                                    >
                                      Engine
                                    </label>
                                    <div
                                      class="amis-ListItem-fieldValue"
                                    >
                                      <span
                                        class="amis-PlainField"
                                      >
                                        Trident
                                      </span>
                                    </div>
                                  </div>
                                </div>
                                <div
                                  class="amis-Hbox-col"
                                >
                                  <div
                                    class="amis-ListItem-field"
                                  >
                                    <label
                                      class="amis-ListItem-fieldLabel"
                                    >
                                      Version
                                    </label>
                                    <div
                                      class="amis-ListItem-fieldValue"
                                    >
                                      <span
                                        class="amis-PlainField"
                                      >
                                        4
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="amis-ListItem amis-ListItem--actions-at-right amis-ListItem--hasItemAction"
                            data-index="1"
                            style="scroll-margin-top: var(--affix-offset-top);"
                          >
                            <div
                              class="amis-ListItem-actions"
                            >
                              <button
                                class="amis-Button amis-Button--link amis-Button--size-sm"
                                type="button"
                              >
                                <span>
                                  查看详情
                                </span>
                              </button>
                            </div>
                            <div
                              class="amis-ListItem-content"
                            >
                              <div
                                class="amis-Hbox amis-Hbox--xs"
                              >
                                <div
                                  class="amis-Hbox-col"
                                >
                                  <div
                                    class="amis-ListItem-field"
                                  >
                                    <label
                                      class="amis-ListItem-fieldLabel"
                                    >
                                      Engine
                                    </label>
                                    <div
                                      class="amis-ListItem-fieldValue"
                                    >
                                      <span
                                        class="amis-PlainField"
                                      >
                                        Trident
                                      </span>
                                    </div>
                                  </div>
                                </div>
                                <div
                                  class="amis-Hbox-col"
                                >
                                  <div
                                    class="amis-ListItem-field"
                                  >
                                    <label
                                      class="amis-ListItem-fieldLabel"
                                    >
                                      Version
                                    </label>
                                    <div
                                      class="amis-ListItem-fieldValue"
                                    >
                                      <span
                                        class="amis-PlainField"
                                      >
                                        4
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="amis-ListItem amis-ListItem--actions-at-right amis-ListItem--hasItemAction"
                            data-index="2"
                            style="scroll-margin-top: var(--affix-offset-top);"
                          >
                            <div
                              class="amis-ListItem-actions"
                            >
                              <button
                                class="amis-Button amis-Button--link amis-Button--size-sm"
                                type="button"
                              >
                                <span>
                                  查看详情
                                </span>
                              </button>
                            </div>
                            <div
                              class="amis-ListItem-content"
                            >
                              <div
                                class="amis-Hbox amis-Hbox--xs"
                              >
                                <div
                                  class="amis-Hbox-col"
                                >
                                  <div
                                    class="amis-ListItem-field"
                                  >
                                    <label
                                      class="amis-ListItem-fieldLabel"
                                    >
                                      Engine
                                    </label>
                                    <div
                                      class="amis-ListItem-fieldValue"
                                    >
                                      <span
                                        class="amis-PlainField"
                                      >
                                        Trident
                                      </span>
                                    </div>
                                  </div>
                                </div>
                                <div
                                  class="amis-Hbox-col"
                                >
                                  <div
                                    class="amis-ListItem-field"
                                  >
                                    <label
                                      class="amis-ListItem-fieldLabel"
                                    >
                                      Version
                                    </label>
                                    <div
                                      class="amis-ListItem-fieldValue"
                                    >
                                      <span
                                        class="amis-PlainField"
                                      >
                                        4
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="amis-ListItem amis-ListItem--actions-at-right amis-ListItem--hasItemAction"
                            data-index="3"
                            style="scroll-margin-top: var(--affix-offset-top);"
                          >
                            <div
                              class="amis-ListItem-actions"
                            >
                              <button
                                class="amis-Button amis-Button--link amis-Button--size-sm"
                                type="button"
                              >
                                <span>
                                  查看详情
                                </span>
                              </button>
                            </div>
                            <div
                              class="amis-ListItem-content"
                            >
                              <div
                                class="amis-Hbox amis-Hbox--xs"
                              >
                                <div
                                  class="amis-Hbox-col"
                                >
                                  <div
                                    class="amis-ListItem-field"
                                  >
                                    <label
                                      class="amis-ListItem-fieldLabel"
                                    >
                                      Engine
                                    </label>
                                    <div
                                      class="amis-ListItem-fieldValue"
                                    >
                                      <span
                                        class="amis-PlainField"
                                      >
                                        Trident
                                      </span>
                                    </div>
                                  </div>
                                </div>
                                <div
                                  class="amis-Hbox-col"
                                >
                                  <div
                                    class="amis-ListItem-field"
                                  >
                                    <label
                                      class="amis-ListItem-fieldLabel"
                                    >
                                      Version
                                    </label>
                                    <div
                                      class="amis-ListItem-fieldValue"
                                    >
                                      <span
                                        class="amis-PlainField"
                                      >
                                        3
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="amis-ListItem amis-ListItem--actions-at-right amis-ListItem--hasItemAction"
                            data-index="4"
                            style="scroll-margin-top: var(--affix-offset-top);"
                          >
                            <div
                              class="amis-ListItem-actions"
                            >
                              <button
                                class="amis-Button amis-Button--link amis-Button--size-sm"
                                type="button"
                              >
                                <span>
                                  查看详情
                                </span>
                              </button>
                            </div>
                            <div
                              class="amis-ListItem-content"
                            >
                              <div
                                class="amis-Hbox amis-Hbox--xs"
                              >
                                <div
                                  class="amis-Hbox-col"
                                >
                                  <div
                                    class="amis-ListItem-field"
                                  >
                                    <label
                                      class="amis-ListItem-fieldLabel"
                                    >
                                      Engine
                                    </label>
                                    <div
                                      class="amis-ListItem-fieldValue"
                                    >
                                      <span
                                        class="amis-PlainField"
                                      >
                                        Trident
                                      </span>
                                    </div>
                                  </div>
                                </div>
                                <div
                                  class="amis-Hbox-col"
                                >
                                  <div
                                    class="amis-ListItem-field"
                                  >
                                    <label
                                      class="amis-ListItem-fieldLabel"
                                    >
                                      Version
                                    </label>
                                    <div
                                      class="amis-ListItem-fieldValue"
                                    >
                                      <span
                                        class="amis-PlainField"
                                      >
                                        4
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="amis-ListItem amis-ListItem--actions-at-right amis-ListItem--hasItemAction"
                            data-index="5"
                            style="scroll-margin-top: var(--affix-offset-top);"
                          >
                            <div
                              class="amis-ListItem-actions"
                            >
                              <button
                                class="amis-Button amis-Button--link amis-Button--size-sm"
                                type="button"
                              >
                                <span>
                                  查看详情
                                </span>
                              </button>
                            </div>
                            <div
                              class="amis-ListItem-content"
                            >
                              <div
                                class="amis-Hbox amis-Hbox--xs"
                              >
                                <div
                                  class="amis-Hbox-col"
                                >
                                  <div
                                    class="amis-ListItem-field"
                                  >
                                    <label
                                      class="amis-ListItem-fieldLabel"
                                    >
                                      Engine
                                    </label>
                                    <div
                                      class="amis-ListItem-fieldValue"
                                    >
                                      <span
                                        class="amis-PlainField"
                                      >
                                        Gecko
                                      </span>
                                    </div>
                                  </div>
                                </div>
                                <div
                                  class="amis-Hbox-col"
                                >
                                  <div
                                    class="amis-ListItem-field"
                                  >
                                    <label
                                      class="amis-ListItem-fieldLabel"
                                    >
                                      Version
                                    </label>
                                    <div
                                      class="amis-ListItem-fieldValue"
                                    >
                                      <span
                                        class="amis-PlainField"
                                      >
                                        4
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="amis-ListItem amis-ListItem--actions-at-right amis-ListItem--hasItemAction"
                            data-index="6"
                            style="scroll-margin-top: var(--affix-offset-top);"
                          >
                            <div
                              class="amis-ListItem-actions"
                            >
                              <button
                                class="amis-Button amis-Button--link amis-Button--size-sm"
                                type="button"
                              >
                                <span>
                                  查看详情
                                </span>
                              </button>
                            </div>
                            <div
                              class="amis-ListItem-content"
                            >
                              <div
                                class="amis-Hbox amis-Hbox--xs"
                              >
                                <div
                                  class="amis-Hbox-col"
                                >
                                  <div
                                    class="amis-ListItem-field"
                                  >
                                    <label
                                      class="amis-ListItem-fieldLabel"
                                    >
                                      Engine
                                    </label>
                                    <div
                                      class="amis-ListItem-fieldValue"
                                    >
                                      <span
                                        class="amis-PlainField"
                                      >
                                        Gecko
                                      </span>
                                    </div>
                                  </div>
                                </div>
                                <div
                                  class="amis-Hbox-col"
                                >
                                  <div
                                    class="amis-ListItem-field"
                                  >
                                    <label
                                      class="amis-ListItem-fieldLabel"
                                    >
                                      Version
                                    </label>
                                    <div
                                      class="amis-ListItem-fieldValue"
                                    >
                                      <span
                                        class="amis-PlainField"
                                      >
                                        5
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="amis-ListItem amis-ListItem--actions-at-right amis-ListItem--hasItemAction"
                            data-index="7"
                            style="scroll-margin-top: var(--affix-offset-top);"
                          >
                            <div
                              class="amis-ListItem-actions"
                            >
                              <button
                                class="amis-Button amis-Button--link amis-Button--size-sm"
                                type="button"
                              >
                                <span>
                                  查看详情
                                </span>
                              </button>
                            </div>
                            <div
                              class="amis-ListItem-content"
                            >
                              <div
                                class="amis-Hbox amis-Hbox--xs"
                              >
                                <div
                                  class="amis-Hbox-col"
                                >
                                  <div
                                    class="amis-ListItem-field"
                                  >
                                    <label
                                      class="amis-ListItem-fieldLabel"
                                    >
                                      Engine
                                    </label>
                                    <div
                                      class="amis-ListItem-fieldValue"
                                    >
                                      <span
                                        class="amis-PlainField"
                                      >
                                        Gecko
                                      </span>
                                    </div>
                                  </div>
                                </div>
                                <div
                                  class="amis-Hbox-col"
                                >
                                  <div
                                    class="amis-ListItem-field"
                                  >
                                    <label
                                      class="amis-ListItem-fieldLabel"
                                    >
                                      Version
                                    </label>
                                    <div
                                      class="amis-ListItem-fieldValue"
                                    >
                                      <span
                                        class="amis-PlainField"
                                      >
                                        5
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="amis-ListItem amis-ListItem--actions-at-right amis-ListItem--hasItemAction"
                            data-index="8"
                            style="scroll-margin-top: var(--affix-offset-top);"
                          >
                            <div
                              class="amis-ListItem-actions"
                            >
                              <button
                                class="amis-Button amis-Button--link amis-Button--size-sm"
                                type="button"
                              >
                                <span>
                                  查看详情
                                </span>
                              </button>
                            </div>
                            <div
                              class="amis-ListItem-content"
                            >
                              <div
                                class="amis-Hbox amis-Hbox--xs"
                              >
                                <div
                                  class="amis-Hbox-col"
                                >
                                  <div
                                    class="amis-ListItem-field"
                                  >
                                    <label
                                      class="amis-ListItem-fieldLabel"
                                    >
                                      Engine
                                    </label>
                                    <div
                                      class="amis-ListItem-fieldValue"
                                    >
                                      <span
                                        class="amis-PlainField"
                                      >
                                        Gecko
                                      </span>
                                    </div>
                                  </div>
                                </div>
                                <div
                                  class="amis-Hbox-col"
                                >
                                  <div
                                    class="amis-ListItem-field"
                                  >
                                    <label
                                      class="amis-ListItem-fieldLabel"
                                    >
                                      Version
                                    </label>
                                    <div
                                      class="amis-ListItem-fieldValue"
                                    >
                                      <span
                                        class="amis-PlainField"
                                      >
                                        5
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="amis-ListItem amis-ListItem--actions-at-right amis-ListItem--hasItemAction"
                            data-index="9"
                            style="scroll-margin-top: var(--affix-offset-top);"
                          >
                            <div
                              class="amis-ListItem-actions"
                            >
                              <button
                                class="amis-Button amis-Button--link amis-Button--size-sm"
                                type="button"
                              >
                                <span>
                                  查看详情
                                </span>
                              </button>
                            </div>
                            <div
                              class="amis-ListItem-content"
                            >
                              <div
                                class="amis-Hbox amis-Hbox--xs"
                              >
                                <div
                                  class="amis-Hbox-col"
                                >
                                  <div
                                    class="amis-ListItem-field"
                                  >
                                    <label
                                      class="amis-ListItem-fieldLabel"
                                    >
                                      Engine
                                    </label>
                                    <div
                                      class="amis-ListItem-fieldValue"
                                    >
                                      <span
                                        class="amis-PlainField"
                                      >
                                        Gecko
                                      </span>
                                    </div>
                                  </div>
                                </div>
                                <div
                                  class="amis-Hbox-col"
                                >
                                  <div
                                    class="amis-ListItem-field"
                                  >
                                    <label
                                      class="amis-ListItem-fieldLabel"
                                    >
                                      Version
                                    </label>
                                    <div
                                      class="amis-ListItem-fieldValue"
                                    >
                                      <span
                                        class="amis-PlainField"
                                      >
                                        5
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:list with itemAction 1`] = `
<body
  class="is-modalOpened"
  style="width: calc(100% - 0px);"
>
  <div>
    <div
      data-amis-theme="cxd"
    >
      <div
        class="amis-Page"
      >
        <div
          class="amis-Page-content"
        >
          <div
            class="amis-Page-main"
          >
            <div
              class="amis-Page-body"
              role="page-body"
            >
              <div
                class="amis-List"
              >
                <div
                  class="amis-List-content-wrapper"
                >
                  <div
                    class="amis-List-main"
                  >
                    <div
                      class="amis-List-fixedTop"
                    >
                      <div
                        class="amis-List-heading"
                      >
                        listTitleForTest
                      </div>
                    </div>
                    <div
                      class="amis-List-items"
                    >
                      <div
                        class="amis-ListItem amis-ListItem--actions-at-right amis-ListItem--hasItemAction"
                        data-index="0"
                        style="scroll-margin-top: var(--affix-offset-top);"
                      >
                        <div
                          class="amis-ListItem-content"
                        >
                          <div
                            class="amis-ListItem-field"
                          >
                            <label
                              class="amis-ListItem-fieldLabel"
                            >
                              Engine
                            </label>
                            <div
                              class="amis-ListItem-fieldValue"
                            >
                              <span
                                class="amis-PlainField"
                              >
                                Trident
                              </span>
                            </div>
                          </div>
                          <div
                            class="amis-ListItem-field"
                          >
                            <label
                              class="amis-ListItem-fieldLabel"
                            >
                              Version
                            </label>
                            <div
                              class="amis-ListItem-fieldValue"
                            >
                              <span
                                class="amis-PlainField"
                              >
                                4
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="amis-ListItem amis-ListItem--actions-at-right amis-ListItem--hasItemAction"
                        data-index="1"
                        style="scroll-margin-top: var(--affix-offset-top);"
                      >
                        <div
                          class="amis-ListItem-content"
                        >
                          <div
                            class="amis-ListItem-field"
                          >
                            <label
                              class="amis-ListItem-fieldLabel"
                            >
                              Engine
                            </label>
                            <div
                              class="amis-ListItem-fieldValue"
                            >
                              <span
                                class="amis-PlainField"
                              >
                                Trident
                              </span>
                            </div>
                          </div>
                          <div
                            class="amis-ListItem-field"
                          >
                            <label
                              class="amis-ListItem-fieldLabel"
                            >
                              Version
                            </label>
                            <div
                              class="amis-ListItem-fieldValue"
                            >
                              <span
                                class="amis-PlainField"
                              >
                                4
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="amis-ListItem amis-ListItem--actions-at-right amis-ListItem--hasItemAction"
                        data-index="2"
                        style="scroll-margin-top: var(--affix-offset-top);"
                      >
                        <div
                          class="amis-ListItem-content"
                        >
                          <div
                            class="amis-ListItem-field"
                          >
                            <label
                              class="amis-ListItem-fieldLabel"
                            >
                              Engine
                            </label>
                            <div
                              class="amis-ListItem-fieldValue"
                            >
                              <span
                                class="amis-PlainField"
                              >
                                Trident
                              </span>
                            </div>
                          </div>
                          <div
                            class="amis-ListItem-field"
                          >
                            <label
                              class="amis-ListItem-fieldLabel"
                            >
                              Version
                            </label>
                            <div
                              class="amis-ListItem-fieldValue"
                            >
                              <span
                                class="amis-PlainField"
                              >
                                4
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="amis-dialog-widget amis-Modal amis-Modal--1th"
    data-amis-theme="cxd"
    role="dialog"
  >
    <div
      class="amis-Modal-overlay in"
    />
    <div
      class="amis-Modal-content in"
    >
      <div
        class="amis-Modal-header"
      >
        <a
          class="amis-Modal-close"
          data-position="left"
          data-tooltip="关闭"
        >
          <icon-mock
            classname="icon icon-close"
            icon="close"
          />
        </a>
        <div
          class="amis-Modal-title"
        >
          详情
        </div>
      </div>
      <div
        class="amis-Modal-body"
        role="dialog-body"
      >
        <span
          class="amis-TplField fr-view"
        >
          <span>
            当前行的数据 browser: Internet Explorer 4.0, version: 4
          </span>
        </span>
      </div>
      <div
        class="amis-Modal-footer"
      >
        <button
          class="amis-Button amis-Button--default amis-Button--size-default"
          type="button"
        >
          <span>
            取消
          </span>
        </button>
        <button
          class="amis-Button amis-Button--primary amis-Button--size-default"
          type="button"
        >
          <span>
            确认
          </span>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Renderer:list with listItem actions & actionsPosition 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <div
              class="amis-List"
            >
              <div
                class="amis-List-content-wrapper"
              >
                <div
                  class="amis-List-main"
                >
                  <div
                    class="amis-List-fixedTop"
                  />
                  <div
                    class="amis-List-items"
                  >
                    <div
                      class="amis-ListItem amis-ListItem--actions-at-right"
                      data-index="0"
                      style="scroll-margin-top: var(--affix-offset-top);"
                    >
                      <div
                        class="amis-ListItem-actions"
                      >
                        <button
                          class="amis-Button amis-Button--link amis-Button--size-sm"
                          type="button"
                        >
                          <span>
                            查看详情
                          </span>
                        </button>
                      </div>
                      <div
                        class="amis-ListItem-content"
                      >
                        <div
                          class="amis-ListItem-field"
                        >
                          <label
                            class="amis-ListItem-fieldLabel"
                          >
                            Engine
                          </label>
                          <div
                            class="amis-ListItem-fieldValue"
                          >
                            <span
                              class="amis-PlainField"
                            >
                              Trident
                            </span>
                          </div>
                        </div>
                        <div
                          class="amis-ListItem-field"
                        >
                          <label
                            class="amis-ListItem-fieldLabel"
                          >
                            Version
                          </label>
                          <div
                            class="amis-ListItem-fieldValue"
                          >
                            <span
                              class="amis-PlainField"
                            >
                              4
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="amis-ListItem amis-ListItem--actions-at-right"
                      data-index="1"
                      style="scroll-margin-top: var(--affix-offset-top);"
                    >
                      <div
                        class="amis-ListItem-actions"
                      >
                        <button
                          class="amis-Button amis-Button--link amis-Button--size-sm"
                          type="button"
                        >
                          <span>
                            查看详情
                          </span>
                        </button>
                      </div>
                      <div
                        class="amis-ListItem-content"
                      >
                        <div
                          class="amis-ListItem-field"
                        >
                          <label
                            class="amis-ListItem-fieldLabel"
                          >
                            Engine
                          </label>
                          <div
                            class="amis-ListItem-fieldValue"
                          >
                            <span
                              class="amis-PlainField"
                            >
                              Trident
                            </span>
                          </div>
                        </div>
                        <div
                          class="amis-ListItem-field"
                        >
                          <label
                            class="amis-ListItem-fieldLabel"
                          >
                            Version
                          </label>
                          <div
                            class="amis-ListItem-fieldValue"
                          >
                            <span
                              class="amis-PlainField"
                            >
                              4
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="amis-ListItem amis-ListItem--actions-at-right"
                      data-index="2"
                      style="scroll-margin-top: var(--affix-offset-top);"
                    >
                      <div
                        class="amis-ListItem-actions"
                      >
                        <button
                          class="amis-Button amis-Button--link amis-Button--size-sm"
                          type="button"
                        >
                          <span>
                            查看详情
                          </span>
                        </button>
                      </div>
                      <div
                        class="amis-ListItem-content"
                      >
                        <div
                          class="amis-ListItem-field"
                        >
                          <label
                            class="amis-ListItem-fieldLabel"
                          >
                            Engine
                          </label>
                          <div
                            class="amis-ListItem-fieldValue"
                          >
                            <span
                              class="amis-PlainField"
                            >
                              Trident
                            </span>
                          </div>
                        </div>
                        <div
                          class="amis-ListItem-field"
                        >
                          <label
                            class="amis-ListItem-fieldLabel"
                          >
                            Version
                          </label>
                          <div
                            class="amis-ListItem-fieldValue"
                          >
                            <span
                              class="amis-PlainField"
                            >
                              4
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:list with listItem avatar & avatarClassName 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <div
              class="amis-List"
            >
              <div
                class="amis-List-content-wrapper"
              >
                <div
                  class="amis-List-main"
                >
                  <div
                    class="amis-List-fixedTop"
                  />
                  <div
                    class="amis-List-items"
                  >
                    <div
                      class="amis-ListItem amis-ListItem--actions-at-right"
                      data-index="0"
                      style="scroll-margin-top: var(--affix-offset-top);"
                    >
                      <span
                        class="amis-ListItem-avatar avatarClassNameForTest"
                      >
                        <img
                          alt="..."
                          src="/path/avatar/0"
                        />
                      </span>
                      <div
                        class="amis-ListItem-content"
                      >
                        <div
                          class="amis-ListItem-field"
                        >
                          <label
                            class="amis-ListItem-fieldLabel"
                          >
                            Engine
                          </label>
                          <div
                            class="amis-ListItem-fieldValue"
                          >
                            <span
                              class="amis-PlainField"
                            >
                              Trident
                            </span>
                          </div>
                        </div>
                        <div
                          class="amis-ListItem-field"
                        >
                          <label
                            class="amis-ListItem-fieldLabel"
                          >
                            Version
                          </label>
                          <div
                            class="amis-ListItem-fieldValue"
                          >
                            <span
                              class="amis-PlainField"
                            >
                              4
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="amis-ListItem amis-ListItem--actions-at-right"
                      data-index="1"
                      style="scroll-margin-top: var(--affix-offset-top);"
                    >
                      <span
                        class="amis-ListItem-avatar avatarClassNameForTest"
                      >
                        <img
                          alt="..."
                          src="/path/avatar/1"
                        />
                      </span>
                      <div
                        class="amis-ListItem-content"
                      >
                        <div
                          class="amis-ListItem-field"
                        >
                          <label
                            class="amis-ListItem-fieldLabel"
                          >
                            Engine
                          </label>
                          <div
                            class="amis-ListItem-fieldValue"
                          >
                            <span
                              class="amis-PlainField"
                            >
                              Trident
                            </span>
                          </div>
                        </div>
                        <div
                          class="amis-ListItem-field"
                        >
                          <label
                            class="amis-ListItem-fieldLabel"
                          >
                            Version
                          </label>
                          <div
                            class="amis-ListItem-fieldValue"
                          >
                            <span
                              class="amis-PlainField"
                            >
                              4
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="amis-ListItem amis-ListItem--actions-at-right"
                      data-index="2"
                      style="scroll-margin-top: var(--affix-offset-top);"
                    >
                      <span
                        class="amis-ListItem-avatar avatarClassNameForTest"
                      >
                        <img
                          alt="..."
                          src="/path/avatar/2"
                        />
                      </span>
                      <div
                        class="amis-ListItem-content"
                      >
                        <div
                          class="amis-ListItem-field"
                        >
                          <label
                            class="amis-ListItem-fieldLabel"
                          >
                            Engine
                          </label>
                          <div
                            class="amis-ListItem-fieldValue"
                          >
                            <span
                              class="amis-PlainField"
                            >
                              Trident
                            </span>
                          </div>
                        </div>
                        <div
                          class="amis-ListItem-field"
                        >
                          <label
                            class="amis-ListItem-fieldLabel"
                          >
                            Version
                          </label>
                          <div
                            class="amis-ListItem-fieldValue"
                          >
                            <span
                              class="amis-PlainField"
                            >
                              4
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:list with listItem title & titleClassName & subTitle & desc 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <div
              class="amis-List"
            >
              <div
                class="amis-List-content-wrapper"
              >
                <div
                  class="amis-List-main"
                >
                  <div
                    class="amis-List-fixedTop"
                  />
                  <div
                    class="amis-List-items"
                  >
                    <div
                      class="amis-ListItem amis-ListItem--actions-at-right"
                      data-index="0"
                      style="scroll-margin-top: var(--affix-offset-top);"
                    >
                      <div
                        class="amis-ListItem-content"
                      >
                        <p
                          class="amis-ListItem-title classForItemTitle"
                        >
                          Win 95+
                        </p>
                        <div>
                          <small
                            class="amis-ListItem-subtitle"
                          >
                            等级为：A
                          </small>
                        </div>
                        <span
                          class="amis-TplField fr-view"
                        >
                          <span>
                            this is list item desc
                          </span>
                        </span>
                        <div
                          class="amis-ListItem-field"
                        >
                          <label
                            class="amis-ListItem-fieldLabel"
                          >
                            Engine
                          </label>
                          <div
                            class="amis-ListItem-fieldValue"
                          >
                            <span
                              class="amis-PlainField"
                            >
                              Trident
                            </span>
                          </div>
                        </div>
                        <div
                          class="amis-ListItem-field"
                        >
                          <label
                            class="amis-ListItem-fieldLabel"
                          >
                            Version
                          </label>
                          <div
                            class="amis-ListItem-fieldValue"
                          >
                            <span
                              class="amis-PlainField"
                            >
                              4
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="amis-ListItem amis-ListItem--actions-at-right"
                      data-index="1"
                      style="scroll-margin-top: var(--affix-offset-top);"
                    >
                      <div
                        class="amis-ListItem-content"
                      >
                        <p
                          class="amis-ListItem-title classForItemTitle"
                        >
                          Win 95+
                        </p>
                        <div>
                          <small
                            class="amis-ListItem-subtitle"
                          >
                            等级为：B
                          </small>
                        </div>
                        <span
                          class="amis-TplField fr-view"
                        >
                          <span>
                            this is list item desc
                          </span>
                        </span>
                        <div
                          class="amis-ListItem-field"
                        >
                          <label
                            class="amis-ListItem-fieldLabel"
                          >
                            Engine
                          </label>
                          <div
                            class="amis-ListItem-fieldValue"
                          >
                            <span
                              class="amis-PlainField"
                            >
                              Trident
                            </span>
                          </div>
                        </div>
                        <div
                          class="amis-ListItem-field"
                        >
                          <label
                            class="amis-ListItem-fieldLabel"
                          >
                            Version
                          </label>
                          <div
                            class="amis-ListItem-fieldValue"
                          >
                            <span
                              class="amis-PlainField"
                            >
                              4
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="amis-ListItem amis-ListItem--actions-at-right"
                      data-index="2"
                      style="scroll-margin-top: var(--affix-offset-top);"
                    >
                      <div
                        class="amis-ListItem-content"
                      >
                        <p
                          class="amis-ListItem-title classForItemTitle"
                        >
                          Win 95+
                        </p>
                        <div>
                          <small
                            class="amis-ListItem-subtitle"
                          >
                            等级为：C
                          </small>
                        </div>
                        <span
                          class="amis-TplField fr-view"
                        >
                          <span>
                            this is list item desc
                          </span>
                        </span>
                        <div
                          class="amis-ListItem-field"
                        >
                          <label
                            class="amis-ListItem-fieldLabel"
                          >
                            Engine
                          </label>
                          <div
                            class="amis-ListItem-fieldValue"
                          >
                            <span
                              class="amis-PlainField"
                            >
                              Trident
                            </span>
                          </div>
                        </div>
                        <div
                          class="amis-ListItem-field"
                        >
                          <label
                            class="amis-ListItem-fieldLabel"
                          >
                            Version
                          </label>
                          <div
                            class="amis-ListItem-fieldValue"
                          >
                            <span
                              class="amis-PlainField"
                            >
                              4
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:list with title & header & footer & headerClassName & footerClassName 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <div
              class="amis-List"
            >
              <div
                class="amis-List-content-wrapper"
              >
                <div
                  class="amis-List-main"
                >
                  <div
                    class="amis-List-fixedTop"
                  >
                    <div
                      class="amis-List-header headerTplClassName"
                    >
                      <span
                        class="amis-TplField fr-view"
                      >
                        <span>
                          头部标题
                        </span>
                      </span>
                    </div>
                    <div
                      class="amis-List-heading"
                    >
                      listTitleForTest
                    </div>
                  </div>
                  <div
                    class="amis-List-placeholder"
                  >
                    <span
                      class="amis-TplField fr-view"
                    >
                      <span>
                        暂无数据
                      </span>
                    </span>
                  </div>
                  <div
                    class="amis-List-footer footerButtonClassName"
                  >
                    <button
                      class="amis-Button amis-Button--default amis-Button--size-default"
                      type="button"
                    >
                      <span>
                        底部按钮
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
